project(ledger_core_tests)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

set(gtest_force_shared_crt ON CACHE BOOL "Build gtest with shared runtime" FORCE)
add_subdirectory(lib/googletest)


if (SYS_LIBUV)
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(UV REQUIRED IMPORTED_TARGET GLOBAL libuv)
    # Manually set the target's properties to use the static lib and tweak the include directory
    set_property(TARGET PkgConfig::UV PROPERTY IMPORTED_CONFIGURATIONS Release)
    set_property(TARGET PkgConfig::UV PROPERTY IMPORTED_LOCATION_RELEASE "${UV_STATIC_LIBRARIES}")
    # Have to add '/..'
    set_property(TARGET PkgConfig::UV PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${UV_INCLUDEDIR}/..")
else()
    add_subdirectory(lib/libuv)
endif()

add_subdirectory(lib/libledger-test)
add_subdirectory(common)
add_subdirectory(bytes)
add_subdirectory(math)
add_subdirectory(utils)
add_subdirectory(async)
add_subdirectory(preferences)
add_subdirectory(debug)
add_subdirectory(net)
add_subdirectory(crypto)
add_subdirectory(bitcoin)
add_subdirectory(collections)
add_subdirectory(integration)
add_subdirectory(database)
add_subdirectory(events)
add_subdirectory(parsers)
add_subdirectory(ripple)
add_subdirectory(tezos)
add_subdirectory(cosmos)
# add_subdirectory(algorand)
add_subdirectory(coin-integration)
